# amplifier-bundle-aiuser

./: .gitignore  README.md  bundle.dot  bundle.md  pyproject.toml
.amplifier/evaluations/: run.sh  run_eval.py
.amplifier/evaluations/agents/stock-amplifier/: install.yaml  invocation.md  meta.yaml
.amplifier/evaluations/tasks/01-drive-to-completion/: grader.yaml  meta.yaml  profile.yaml  task.yaml
.amplifier/evaluations/tasks/01-drive-to-completion/grader-data/: check.csv
.amplifier/evaluations/tasks/02-honest-verdict/: grader.yaml  meta.yaml  profile.yaml  task.yaml
.amplifier/evaluations/tasks/02-honest-verdict/workspace/: sales.csv
behaviors/: aiuser.yaml
src/amplifier_aiuser/: __init__.py  ai_user.py  tools.py
